<resources>
    <string name="app_name">Kaizen Speaking</string>
    <string name="title_home">Beranda</string>
    <string name="title_analyze">Latihan</string>
    <string name="title_history">Riwayat</string>
    <string name="hello_blank_fragment">Sedang dalam pengembangan</string>
    <string name="input_name">Nama Lengkap</string>
    <string name="input_email">Alamat Email</string>
    <string name="input_password">Kata Sandi</string>
    <string name="input_confirm_password">Ulang Kata Sandi</string>
    <string name="daftar">DAFTAR</string>
    <string name="masuk">MASUK</string>
    <string name="atau">Atau</string>
    <string name="login_google">Masuk Dengan Google</string>
    <string name="instruction_title">Pastikan hal-hal berikut sebelum merekam : </string>
    <string name="instruction_desc1">1. Jika berlatih untuk pidato/presentasi, spesifikkan materi atau cakupan yang akan disampaikan. </string>
    <string name="instruction_desc2">2. Jika berlatih untuk wawancara, tentukan posisi yang dilamar, nama perusahaan, dan suasana (formal/informal). </string>
    <string name="instruction_desc3">3. Semakin spesifik topik yang dimasukkan, semakin baik hasil analisis yang akan didapatkan. </string>
    <string name="topics_title">Topik</string>
    <string name="input_topic">Masukkan topik yang ingin dibahas</string>
    <string name="instruction_detail">Lihat instruksi</string>
    <string name="start_record">Mulai merekam</string>
    <string name="stop">Selesai</string>
    <string name="analyze">Analisis</string>
    <string name="text_instruction_1">Berada di ruangan senyap untuk mengurangi gangguan suara. </string>
    <string name="desc_instruction_1">Untuk analisis suara yang akurat, berada di ruangan senyap agar aplikasi mendeteksi dan menganalisis ucapan lebih jelas.</string>
    <string name="text_instruction_2">Pastikan mikrofon berfungsi dan berada dekat mulut.</string>
    <string name="desc_instruction_2">Pastikan mikrofon berfungsi baik dan ditempatkan dekat mulut untuk menangkap suara dengan jelas dan mengurangi distorsi.</string>
    <string name="text_instruction_3">Siapkan skrip atau poin utama agar pembicaraan terarah.</string>
    <string name="desc_instruction_3">Siapkan skrip atau poin-poin utama sebelum percakapan agar terarah, jelas, dan mudah dianalisis untuk hasil lebih efektif.</string>
    <string name="text_instruction_4">Pastikan anda memiliki waktu yang cukup untuk merekam tanpa gangguan.</string>
    <string name="desc_instruction_4">Siapkan waktu cukup untuk merekam tanpa interupsi agar hasil analisis suara akurat dan optimal.</string>
    <string name="text_instruction_5">Posisikan diri dengan rileks dan nyaman</string>
    <string name="desc_instruction_5">Siapkan skrip atau poin-poin utama sebelum percakapan agar terarah, jelas, dan mudah dianalisis untuk hasil lebih efektif.</string>
    <string name="account_name"><![CDATA[Sign In >]]></string>
    <string name="article_title">Artikel</string>
    <string name="article_description">Ayo baca artikel untuk menambah wawasan kamu</string>
    <string name="account">Account</string>
    <string name="searchArticle">Cari Artikel...</string>
    <string name="hallo">Hallo!</string>
    <string name="article_summary">Lorem Ipsum Dolor Sir Amet</string>
    <string name="article_title_data">Judul Artikel Judul Artikel Judul Artikel Judul Artikel Judul Artikel Judul Artikel Judul Artikel</string>
    <string name="article_description_data">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="detail_title">Detail Latihan</string>
    <string name="about">About Kaizen Speaking</string>
    <string name="score">Nilai Keseluruhan</string>
    <string name="score_detail">Detail Nilai</string>
    <string name="topic_item">0. Judul Topik</string>
    <string name="date_item">24 Nov 2024 11.30</string>
    <string name="duration_item">00:00</string>
    <string name="latihan_pidato">Latihan</string>
    <string name="riwayat_latihan">Riwayat Latihan</string>
    <string name="progres_latihan">Progres Latihan</string>
    <string-array name="tempdata_article_title">
        <item>Cara Mudah Meningkatkan Kepercayaan Diri saat Berada di Depan Umum</item>
        <item>Metode Public Speaking: Pengertian, Tujuan, Metode, dan Tips</item>
        <item>Retorik Adalah: Seni Berbicara yang Efektif dan Meyakinkan</item>
        <item>Public Speaking: Arti, Metode, Manfaat, Tujuan, dan Cara Meningkatkan Skill-nya</item>
        <item>Pakai Cara Ini Supaya Kamu Pede Ngomong di Depan Umum!</item>
        <item>Public Speaking itu Mudah</item>
        <item>Public Speaking: Mengasah Kemampuan Berbicara untuk Membangun Karir Sukses</item>
    </string-array>
    <string-array name="tempdata_article_description">
        <item>Halo, sahabat pembelajar! Berbicara di depan umum sering kali dianggap sebagai momok yang menakutkan. Faktanya, sebuah survei oleh National Institute of Mental Health menunjukkan bahwa sekitar 73% orang merasa cemas ketika harus tampil di depan orang banyak. </item>
        <item>Metode Public Speaking – Grameds, pernahkah kamu berbicara di depan umum? Jika pernah, maka itu berarti kamu sedang melakukan public speaking. Wah, keren ya pastinya, bisa berkomunikasi di depan banyak orang.</item>
        <item>Retorika adalah seni berbicara secara efektif dan meyakinkan untuk mempengaruhi pendengar. Istilah ini berasal dari bahasa Yunani "rhetorike" yang berarti keterampilan berpidato. Dalam pengertian yang lebih luas, retorika mencakup kemampuan menggunakan bahasa lisan maupun tulisan untuk berkomunikasi secara persuasif.</item>
        <item>Sebelum membahas metode dan cara meningkatkannya, pertama-tama kita perlu mengulas definisi dari soft skill tersebut. Melansir laman ThoughtCo, public speaking adalah sebuah seni berpidato, di mana pembicara berkomunikasi dengan audiensnya melalui presentasi lisan.</item>
        <item>Pernahkah kamu mempresentasikan sesuatu di depan kelas? Atau pernahkah kamu berpidato untuk sebuah acara? Nah, itu adalah berbicara di depan umum. Berbicara di depan umum merupakan teknik berbicara yang dibutuhkan oleh pembicara agar bisa menarik semua perhatian audiens.</item>
        <item>Penggunaan istilah public speaking ini sudah sangat lazim di telinga kita. Bukan istilah yang asing bagi masyarakat. Namun demikian ada beberapa definisi sebagai berikut: Menurut Webster’s Thrid International Dictionary, terdapat dua pengertian mengenai public speaking yakni “The art of process of making speeches in public” dan “ The art of effective oral communication with an audience. Jadi menurut kamus ini public speaking adalah bagian seni dari proses penyampaian pidato didepan publik dan seni ilmu komunikasj lisan secara efektif dengan melibatkan pendengar (audience).</item>
        <item>
            Kemampuan public speaking merupakan keterampilan komunikasi yang sangat berharga dan penting dalam kehidupan sehari-hari maupun di berbagai bidang profesional. Seorang yang memiliki kemampuan public speaking yang baik dapat menginspirasi, mempengaruhi, dan menyampaikan pesan dengan jelas kepada audiensnya. Apakah kamu ingin mengetahui lebih lanjut mengenai pentingnya public speaking? Simak artikel ini untuk mendapatkan pemahaman yang lebih mendalam.
        </item>
    </string-array>
    <string-array name="tempdata_article_url">
        <item>https://www.kompasiana.com/salwaanur8965/671702aac925c424c2134192/cara-mudah-meningkatkan-kepercayaan-diri-saat-berada-di-depan-umum</item>
        <item>https://www.gramedia.com/literasi/metode-public-speaking/</item>
        <item>https://www.liputan6.com/feeds/read/5779700/retorik-adalah-seni-berbicara-yang-efektif-dan-meyakinkan</item>
        <item>https://glints.com/id/lowongan/kemampuan-public-speaking/</item>
        <item>https://www.generali.co.id/id/healthyliving/healthy-lifestyle/pakai-cara-ini-supaya-kamu-pede-ngomong-di-depan-umum</item>
        <item>https://www.djkn.kemenkeu.go.id/kpknl-tangerang1/baca-artikel/14892/Public-Speaking-itu-Mudah.html</item>
        <item>
            https://www.lspr.ac.id/tujuan-keuntungan-public-speaking/
        </item>
    </string-array>
    <string name="greetings_with_name">"Halo, Nama Pengguna! ></string>
    <string name="progress_title">Progress Kamu</string>
    <string name="progress_title2">Selamat Datang!</string>
    <string name="number_of_exercise">Banyak latihan: </string>
    <string name="matrix_kejelasan">Kejelasan Berbicara</string>
    <string name="matrix_diksi">Pemilihan Diksi</string>
    <string name="matrix_kelancaran">Kelancaran dan Intonasi</string>
    <string name="matrix_emosi">Emosi dan Keterlibatan Audiens</string>
    <string name="description_matrix_kejelasan">
    &lt;b&gt;Definisi:&lt;/b&gt;
        &lt;br/&gt; Mengukur seberapa lancar pembicara menyampaikan pidato tanpa jeda berlebihan atau pengulangan yang tidak diperlukan, serta seberapa efektif intonasi mendukung pesan.&lt;br/&gt; &lt;br/&gt;
    &lt;b&gt;Fokus Penilaian: &lt;/b&gt;
         &lt;br/&gt;Alur bicara yang alami, ritme pidato, serta naik-turun nada suara yang menambah penekanan pada poin penting.&lt;br /&gt;&lt;br /&gt;
    &lt;b&gt;Faktor yang Mempengaruhi:&lt;/b&gt;
        &lt;br/&gt;Kepercayaan diri, latihan, dan penguasaan materi.
    </string>
    <string name="description_matrix_diksi">
    &lt;b&gt;Definisi:&lt;/b&gt;
        &lt;br/&gt; Menilai sejauh mana pembicara menggunakan kata-kata yang tepat, kaya makna, dan sesuai dengan konteks pidato. &lt;br/&gt;&lt;br/&gt;
    &lt;b&gt;Fokus Penilaian: &lt;/b&gt;
         &lt;br/&gt;Variasi kosakata, kesesuaian dengan audiens, dan kemampuan menyampaikan makna dengan tepat.&lt;br /&gt;&lt;br /&gt;
    &lt;b&gt;Faktor yang Mempengaruhi:&lt;/b&gt;
        &lt;br/&gt;Pemilihan kata, kejelasan dalam penyampaian ide, dan kesesuaian dengan tema pidato.
    </string>
    <string name="description_matrix_kelancaran">
    &lt;b&gt;Definisi:&lt;/b&gt;
        &lt;br/&gt; Mengukur seberapa lancar pembicara menyampaikan pidato tanpa jeda berlebihan atau pengulangan yang tidak diperlukan, serta seberapa efektif intonasi mendukung pesan. &lt;br/&gt;&lt;br/&gt;
    &lt;b&gt;Fokus Penilaian: &lt;/b&gt;
         &lt;br/&gt;Alur bicara yang alami, ritme pidato, serta naik-turun nada suara yang menambah penekanan pada poin penting.&lt;br /&gt;&lt;br /&gt;
    &lt;b&gt;Faktor yang Mempengaruhi:&lt;/b&gt;
        &lt;br/&gt;Kepercayaan diri, latihan, dan penguasaan materi.
    </string>
    <string name="description_matrix_emosi">
     &lt;b&gt;Definisi:&lt;/b&gt;
        &lt;br/&gt; Mengukur kemampuan pembicara untuk menyampaikan emosi yang sesuai dan menciptakan keterhubungan dengan audiens. &lt;br/&gt;&lt;br/&gt;
    &lt;b&gt;Fokus Penilaian: &lt;/b&gt;
         &lt;br/&gt;Ekspresi wajah, bahasa tubuh, dan cara pembicara memotivasi atau menyentuh audiens secara emosional.&lt;br /&gt;&lt;br /&gt;
    &lt;b&gt;Faktor yang Mempengaruhi:&lt;/b&gt;
        &lt;br/&gt;Penghayatan, empati, dan teknik komunikasi interpersonal.
    </string>
</resources>