<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.kaizenspeaking.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_home_signed"
        android:name="com.example.kaizenspeaking.ui.home_signed.HomeSignedFragment"
        android:label="HomeSigned"
        tools:layout="@layout/fragment_home_signed" />

    <fragment
        android:id="@+id/navigation_analyze"
        android:name="com.example.kaizenspeaking.ui.analyze.AnalyzeFragment"
        android:label="@string/title_analyze"
        tools:layout="@layout/fragment_analyze" >
        <action
            android:id="@+id/action_navigation_analyze_to_analyzeResultFragment"
            app:destination="@id/analyzeResultFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.kaizenspeaking.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/action_navigation_history_to_trainingDetailFragment"
            app:destination="@id/trainingDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/analyzeResultFragment"
        android:name="com.example.kaizenspeaking.ui.analyze.AnalyzeResultFragment"
        android:label="fragment_analyze_result"
        tools:layout="@layout/fragment_analyze_result" />

    <fragment
        android:id="@+id/trainingDetailFragment"
        android:name="com.example.kaizenspeaking.ui.history.detail.TrainingDetailFragment"
        android:label="Training Detail"
        tools:layout="@layout/fragment_training_detail">
        <!-- Add arguments that will be passed to the fragment -->
        <argument
            android:name="sessionId"
            app:argType="string" />
        <argument
            android:name="sessionTitle"
            app:argType="string" />
    </fragment>

</navigation>